//
// Copyright (C) 2019-2023 vdaas.org vald team <vald@vdaas.org>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// You may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package filter.egress.v1;

import "google/api/annotations.proto";
import "v1/payload/payload.proto";

option go_package = "github.com/vdaas/vald/apis/grpc/v1/filter/egress";
option java_multiple_files = true;
option java_outer_classname = "ValdEgressFilter";
option java_package = "org.vdaas.vald.api.v1.filter.egress";

// Represent the egress filter service.
service Filter {
  // Represent the RPC to filter the distance.
  rpc FilterDistance(payload.v1.Filter.DistanceRequest) returns (payload.v1.Filter.DistanceResponse) {
    option (google.api.http) = {
      post: "/filter/egress/distance"
      body: "*"
    };
  }

  // Represent the RPC to filter the vector.
  rpc FilterVector(payload.v1.Filter.VectorRequest) returns (payload.v1.Filter.VectorResponse) {
    option (google.api.http) = {
      post: "/filter/egress/vector"
      body: "*"
    };
  }
}
